examples/negative/parse_errors/L3/reserved_procedure.ob
MODULE Reserved;

VAR PROCEDURE: INTEGER;

END Reserved.
